[gd_scene load_steps=27 format=3 uid="uid://dg6w31d2gpglv"]

[ext_resource type="Texture2D" uid="uid://cryjjtushkc4a" path="res://objects/floor.png" id="1_bt44k"]
[ext_resource type="Script" uid="uid://d0131smj1rjtp" path="res://levels/level_1.gd" id="1_btoec"]
[ext_resource type="PackedScene" uid="uid://c6tnrclb70hyi" path="res://Character/player.tscn" id="2_jirdo"]
[ext_resource type="PackedScene" uid="uid://1d5y5pivsepk" path="res://levels/cookies.tscn" id="2_kx6l7"]
[ext_resource type="PackedScene" uid="uid://wwvba6jymiwt" path="res://levels/opened_door.tscn" id="3_n46q3"]
[ext_resource type="Texture2D" uid="uid://dlsse6geijuj" path="res://objects/closed g door.png" id="4_l53as"]
[ext_resource type="Texture2D" uid="uid://ci2giol3i4yjw" path="res://objects/assits for the jam .png" id="6_gwceb"]
[ext_resource type="FontFile" uid="uid://yxkfm7fo5bvx" path="res://Button/m3x6.ttf" id="8_5ot28"]
[ext_resource type="Texture2D" uid="uid://bu276f1e34t3d" path="res://Background/Green.png" id="8_l53as"]
[ext_resource type="AudioStream" uid="uid://cfrkdcxbbcs84" path="res://Sounds/Minimalist4.mp3" id="10_5ot28"]
[ext_resource type="PackedScene" uid="uid://dgo2istfpbd03" path="res://camera/camera_2d.tscn" id="10_08mmt"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3sk1a"]
texture = ExtResource("1_bt44k")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_08mmt"]
texture = ExtResource("6_gwceb")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_btoec"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_3sk1a")
sources/2 = SubResource("TileSetAtlasSource_08mmt")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_3sk1a"]
a = Vector2(45, 0)
b = Vector2(-51, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_3sk1a"]
radius = 58.7282

[sub_resource type="Animation" id="Animation_5ot28"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_08mmt"]
resource_name = "no_imp"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aerfg"]
_data = {
&"RESET": SubResource("Animation_5ot28"),
&"no_imp": SubResource("Animation_08mmt")
}

[sub_resource type="Animation" id="Animation_betor"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_nmsli"]
resource_name = "trans2_try"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3sk1a"]
resource_name = "trans2_try_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vjtdm"]
_data = {
&"RESET": SubResource("Animation_betor"),
&"trans2_try": SubResource("Animation_nmsli"),
&"trans2_try_2": SubResource("Animation_3sk1a")
}

[sub_resource type="Gradient" id="Gradient_08mmt"]
offsets = PackedFloat32Array(0, 0.535088, 0.578947)
colors = PackedColorArray(1, 1, 1, 1, 0.0757576, 0.0757576, 0.0757576, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5ot28"]
gradient = SubResource("Gradient_08mmt")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_08mmt"]
polygon = PackedVector2Array(707, 317, 709, 642, 1125, 649, 1129, 317)

[node name="LEVEL1" type="Node2D"]
script = ExtResource("1_btoec")
opened_door_scene = ExtResource("3_n46q3")

[node name="Green" type="Sprite2D" parent="."]
position = Vector2(574.5, 361)
scale = Vector2(17.9844, 11.2188)
texture = ExtResource("8_l53as")

[node name="LockedDoor" type="Sprite2D" parent="."]
position = Vector2(97, 288)
texture = ExtResource("4_l53as")

[node name="DOORS" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_btoec")
format = 2
layer_0/tile_data = PackedInt32Array(851968, 131074, 0, 917504, 131074, 0, 983040, 131074, 0, 1048576, 131074, 0, 1114112, 131074, 0, 1179648, 131074, 0, 1245184, 131074, 0, 851969, 131074, 0, 917505, 131074, 0, 983041, 131074, 0, 1048577, 131074, 0, 1114113, 131074, 0, 1179649, 131074, 0, 1245185, 131074, 0, 851970, 131074, 0, 917506, 131074, 0, 983042, 131074, 0, 1048578, 131074, 0, 1114114, 131074, 0, 1179650, 131074, 0, 1245186, 131074, 0, 851971, 131074, 0, 917507, 131074, 0, 983043, 131074, 0, 1048579, 131074, 0, 1114115, 131074, 0, 1179651, 131074, 0, 1245187, 131074, 0, 851972, 131074, 0, 917508, 131074, 0, 983044, 131074, 0, 1048580, 131074, 0, 1114116, 131074, 0, 1179652, 131074, 0, 1245188, 131074, 0, 851973, 131074, 0, 917509, 131074, 0, 983045, 131074, 0, 1048581, 131074, 0, 1114117, 131074, 0, 1179653, 131074, 0, 1245189, 131074, 0, 851974, 131074, 0, 917510, 131074, 0, 983046, 131074, 0, 1048582, 131074, 0, 1114118, 131074, 0, 1179654, 131074, 0, 1245190, 131074, 0, 851975, 131074, 0, 917511, 131074, 0, 983047, 131074, 0, 1048583, 131074, 0, 1114119, 131074, 0, 1179655, 131074, 0, 1245191, 131074, 0, 851976, 131074, 0, 917512, 131074, 0, 983048, 131074, 0, 1048584, 131074, 0, 1114120, 131074, 0, 1179656, 131074, 0, 1245192, 131074, 0, 851977, 131074, 0, 917513, 131074, 0, 983049, 131074, 0, 1048585, 131074, 0, 1114121, 131074, 0, 1179657, 131074, 0, 1245193, 131074, 0, 851978, 131074, 0, 917514, 131074, 0, 983050, 131074, 0, 1048586, 131074, 0, 1114122, 131074, 0, 1179658, 131074, 0, 1245194, 131074, 0, 851979, 131074, 0, 917515, 131074, 0, 983051, 131074, 0, 1048587, 131074, 0, 1114123, 131074, 0, 1179659, 131074, 0, 1245195, 131074, 0, 851980, 131074, 0, 917516, 131074, 0, 983052, 131074, 0, 1048588, 131074, 0, 1114124, 131074, 0, 1179660, 131074, 0, 1245196, 131074, 0, 851981, 131074, 0, 917517, 131074, 0, 983053, 131074, 0, 1048589, 131074, 0, 1114125, 131074, 0, 1179661, 131074, 0, 1245197, 131074, 0, 851982, 131074, 0, 917518, 131074, 0, 983054, 131074, 0, 1048590, 131074, 0, 1114126, 131074, 0, 1179662, 131074, 0, 1245198, 131074, 0, 851983, 131074, 0, 917519, 131074, 0, 983055, 131074, 0, 1048591, 131074, 0, 1114127, 131074, 0, 1179663, 131074, 0, 1245199, 131074, 0, 851984, 131074, 0, 917520, 131074, 0, 983056, 131074, 0, 1048592, 131074, 0, 1114128, 131074, 0, 1179664, 131074, 0, 1245200, 131074, 0, 655360, 131074, 0, 720896, 131074, 0, 786432, 131074, 0, 655361, 131074, 0, 720897, 131074, 0, 786433, 131074, 0, 655362, 131074, 0, 720898, 131074, 0, 786434, 131074, 0, 655363, 131074, 0, 720899, 131074, 0, 786435, 131074, 0, 655364, 131074, 0, 720900, 131074, 0, 786436, 131074, 0, 655365, 131074, 0, 720901, 131074, 0, 786437, 131074, 0, 655366, 131074, 0, 720902, 131074, 0, 786438, 131074, 0, 655367, 131074, 0, 720903, 131074, 0, 786439, 131074, 0, 655368, 131074, 0, 720904, 131074, 0, 786440, 131074, 0, 655369, 131074, 0, 720905, 131074, 0, 786441, 131074, 0, 655370, 131074, 0, 720906, 131074, 0, 786442, 131074, 0, 655371, 131074, 0, 720907, 131074, 0, 786443, 131074, 0, 655372, 131074, 0, 720908, 131074, 0, 786444, 131074, 0, 655373, 131074, 0, 720909, 131074, 0, 786445, 131074, 0, 655374, 131074, 0, 720910, 131074, 0, 786446, 131074, 0, 655375, 131074, 0, 720911, 131074, 0, 786447, 131074, 0, 655376, 131074, 0, 720912, 131074, 0, 786448, 131074, 0, 655377, 131074, 0, 720913, 131074, 0, 786449, 131074, 0, 851985, 131074, 0, 917521, 131074, 0, 983057, 131074, 0, 1048593, 131074, 0, 1114129, 131074, 0, 1179665, 131074, 0, 1245201, 131074, 0, 655378, 131074, 0, 720914, 131074, 0, 786450, 131074, 0, 851986, 131074, 0, 917522, 131074, 0, 983058, 131074, 0, 1048594, 131074, 0, 1114130, 131074, 0, 1179666, 131074, 0, 1245202, 131074, 0, 1310720, 131074, 0, 1310721, 131074, 0, 1310722, 131074, 0, 1310723, 131074, 0, 1310724, 131074, 0, 1310725, 131074, 0, 1310726, 131074, 0, 1310727, 131074, 0, 1310728, 131074, 0, 1310729, 131074, 0, 1310730, 131074, 0, 1310731, 131074, 0, 1310732, 131074, 0, 1310733, 131074, 0, 1310734, 131074, 0, 1310735, 131074, 0, 1310736, 131074, 0, 1310737, 131074, 0, 1310738, 131074, 0, -131072, 131074, 0, -65536, 131074, 0, 0, 131074, 0, 65536, 131074, 0, 131072, 131074, 0, 196608, 131074, 0, 262144, 131074, 0, 327680, 131074, 0, 393216, 131074, 0, 458752, 131074, 0, 524288, 131074, 0, 589824, 131074, 0, -131071, 131074, 0, -65535, 131074, 0, 1, 131074, 0, 65537, 131074, 0, 131073, 131074, 0, 196609, 131074, 0, 262145, 131074, 0, 327681, 131074, 0, 393217, 131074, 0, 458753, 131074, 0, 524289, 131074, 0, 589825, 131074, 0, 655382, 131074, 0, 720918, 131074, 0, 786454, 131074, 0, 851990, 131074, 0, 917526, 131074, 0, 983062, 131074, 0, 1048598, 131074, 0, 1114134, 131074, 0, 1179670, 131074, 0, 1245206, 131074, 0, 1310742, 131074, 0, 655383, 131074, 0, 720919, 131074, 0, 786455, 131074, 0, 851991, 131074, 0, 917527, 131074, 0, 983063, 131074, 0, 1048599, 131074, 0, 1114135, 131074, 0, 1179671, 131074, 0, 1245207, 131074, 0, 1310743, 131074, 0, 655384, 131074, 0, 720920, 131074, 0, 786456, 131074, 0, 851992, 131074, 0, 917528, 131074, 0, 983064, 131074, 0, 1048600, 131074, 0, 1114136, 131074, 0, 1179672, 131074, 0, 1245208, 131074, 0, 1310744, 131074, 0, 655385, 131074, 0, 720921, 131074, 0, 786457, 131074, 0, 851993, 131074, 0, 917529, 131074, 0, 983065, 131074, 0, 1048601, 131074, 0, 1114137, 131074, 0, 1179673, 131074, 0, 1245209, 131074, 0, 1310745, 131074, 0, 655386, 131074, 0, 720922, 131074, 0, 786458, 131074, 0, 851994, 131074, 0, 917530, 131074, 0, 983066, 131074, 0, 1048602, 131074, 0, 1114138, 131074, 0, 1179674, 131074, 0, 1245210, 131074, 0, 1310746, 131074, 0, 655387, 131074, 0, 720923, 131074, 0, 786459, 131074, 0, 851995, 131074, 0, 917531, 131074, 0, 983067, 131074, 0, 1048603, 131074, 0, 1114139, 131074, 0, 1179675, 131074, 0, 1245211, 131074, 0, 1310747, 131074, 0, 655388, 131074, 0, 720924, 131074, 0, 786460, 131074, 0, 851996, 131074, 0, 917532, 131074, 0, 983068, 131074, 0, 1048604, 131074, 0, 1114140, 131074, 0, 1179676, 131074, 0, 1245212, 131074, 0, 1310748, 131074, 0, 655389, 131074, 0, 720925, 131074, 0, 786461, 131074, 0, 851997, 131074, 0, 917533, 131074, 0, 983069, 131074, 0, 1048605, 131074, 0, 1114141, 131074, 0, 1179677, 131074, 0, 1245213, 131074, 0, 1310749, 131074, 0, 655390, 131074, 0, 720926, 131074, 0, 786462, 131074, 0, 851998, 131074, 0, 917534, 131074, 0, 983070, 131074, 0, 1048606, 131074, 0, 1114142, 131074, 0, 1179678, 131074, 0, 1245214, 131074, 0, 1310750, 131074, 0, 655391, 131074, 0, 720927, 131074, 0, 786463, 131074, 0, 851999, 131074, 0, 917535, 131074, 0, 983071, 131074, 0, 1048607, 131074, 0, 1114143, 131074, 0, 1179679, 131074, 0, 1245215, 131074, 0, 1310751, 131074, 0, 655392, 131074, 0, 720928, 131074, 0, 786464, 131074, 0, 852000, 131074, 0, 917536, 131074, 0, 983072, 131074, 0, 1048608, 131074, 0, 1114144, 131074, 0, 1179680, 131074, 0, 1245216, 131074, 0, 1310752, 131074, 0, 655393, 131074, 0, 720929, 131074, 0, 786465, 131074, 0, 852001, 131074, 0, 917537, 131074, 0, 983073, 131074, 0, 1048609, 131074, 0, 1114145, 131074, 0, 1179681, 131074, 0, 1245217, 131074, 0, 1310753, 131074, 0, 655394, 131074, 0, 720930, 131074, 0, 786466, 131074, 0, 852002, 131074, 0, 917538, 131074, 0, 983074, 131074, 0, 1048610, 131074, 0, 1114146, 131074, 0, 1179682, 131074, 0, 1245218, 131074, 0, 1310754, 131074, 0, 655395, 131074, 0, 720931, 131074, 0, 786467, 131074, 0, 852003, 131074, 0, 917539, 131074, 0, 983075, 131074, 0, 1048611, 131074, 0, 1114147, 131074, 0, 1179683, 131074, 0, 1245219, 131074, 0, 1310755, 131074, 0, -131038, 131074, 0, -65502, 131074, 0, 34, 131074, 0, 65570, 131074, 0, 131106, 131074, 0, 196642, 131074, 0, 262178, 131074, 0, 327714, 131074, 0, 393250, 131074, 0, 458786, 131074, 0, 524322, 131074, 0, 589858, 131074, 0, -131037, 131074, 0, -65501, 131074, 0, 35, 131074, 0, 65571, 131074, 0, 131107, 131074, 0, 196643, 131074, 0, 262179, 131074, 0, 327715, 131074, 0, 393251, 131074, 0, 458787, 131074, 0, 524323, 131074, 0, 589859, 131074, 0, -131070, 131074, 0, -65534, 131074, 0, 2, 131074, 0, -131069, 131074, 0, -65533, 131074, 0, 3, 131074, 0, -131068, 131074, 0, -65532, 131074, 0, 4, 131074, 0, -131067, 131074, 0, -65531, 131074, 0, 5, 131074, 0, -131066, 131074, 0, -65530, 131074, 0, 6, 131074, 0, -131065, 131074, 0, -65529, 131074, 0, 7, 131074, 0, -131064, 131074, 0, -65528, 131074, 0, 8, 131074, 0, -131063, 131074, 0, -65527, 131074, 0, 9, 131074, 0, -131062, 131074, 0, -65526, 131074, 0, 10, 131074, 0, -131061, 131074, 0, -65525, 131074, 0, 11, 131074, 0, -131060, 131074, 0, -65524, 131074, 0, 12, 131074, 0, -131059, 131074, 0, -65523, 131074, 0, 13, 131074, 0, -131058, 131074, 0, -65522, 131074, 0, 14, 131074, 0, -131057, 131074, 0, -65521, 131074, 0, 15, 131074, 0, -131056, 131074, 0, -65520, 131074, 0, 16, 131074, 0, -131055, 131074, 0, -65519, 131074, 0, 17, 131074, 0, -131054, 131074, 0, -65518, 131074, 0, 18, 131074, 0, -131053, 131074, 0, -65517, 131074, 0, 19, 131074, 0, -131052, 131074, 0, -65516, 131074, 0, 20, 131074, 0, -131051, 131074, 0, -65515, 131074, 0, 21, 131074, 0, -131050, 131074, 0, -65514, 131074, 0, 22, 131074, 0, -131049, 131074, 0, -65513, 131074, 0, 23, 131074, 0, -131048, 131074, 0, -65512, 131074, 0, 24, 131074, 0, -131047, 131074, 0, -65511, 131074, 0, 25, 131074, 0, -131046, 131074, 0, -65510, 131074, 0, 26, 131074, 0, -131045, 131074, 0, -65509, 131074, 0, 27, 131074, 0, -131044, 131074, 0, -65508, 131074, 0, 28, 131074, 0, -131043, 131074, 0, -65507, 131074, 0, 29, 131074, 0, -131042, 131074, 0, -65506, 131074, 0, 30, 131074, 0, -131041, 131074, 0, -65505, 131074, 0, 31, 131074, 0, -131040, 131074, 0, -65504, 131074, 0, 32, 131074, 0, -131039, 131074, 0, -65503, 131074, 0, 33, 131074, 0, -131076, 131074, 0, -65540, 131074, 0, -4, 131074, 0, 65532, 131074, 0, 131068, 131074, 0, 196604, 131074, 0, 262140, 131074, 0, 327676, 131074, 0, 393212, 131074, 0, 458748, 131074, 0, 524284, 131074, 0, 589820, 131074, 0, 655356, 131074, 0, 720892, 131074, 0, 786428, 131074, 0, 851964, 131074, 0, 917500, 131074, 0, 983036, 131074, 0, 1048572, 131074, 0, 1114108, 131074, 0, 1179644, 131074, 0, 1245180, 131074, 0, 1310716, 131074, 0, 1376252, 131074, 0, -131075, 131074, 0, -65539, 131074, 0, -3, 131074, 0, 65533, 131074, 0, 131069, 131074, 0, 196605, 131074, 0, 262141, 131074, 0, 327677, 131074, 0, 393213, 131074, 0, 458749, 131074, 0, 524285, 131074, 0, 589821, 131074, 0, 655357, 131074, 0, 720893, 131074, 0, 786429, 131074, 0, 851965, 131074, 0, 917501, 131074, 0, 983037, 131074, 0, 1048573, 131074, 0, 1114109, 131074, 0, 1179645, 131074, 0, 1245181, 131074, 0, 1310717, 131074, 0, 1376253, 131074, 0, -131074, 131074, 0, -65538, 131074, 0, -2, 131074, 0, 65534, 131074, 0, 131070, 131074, 0, 196606, 131074, 0, 262142, 131074, 0, 327678, 131074, 0, 393214, 131074, 0, 458750, 131074, 0, 524286, 131074, 0, 589822, 131074, 0, 655358, 131074, 0, 720894, 131074, 0, 786430, 131074, 0, 851966, 131074, 0, 917502, 131074, 0, 983038, 131074, 0, 1048574, 131074, 0, 1114110, 131074, 0, 1179646, 131074, 0, 1245182, 131074, 0, 1310718, 131074, 0, 1376254, 131074, 0, -131073, 131074, 0, -65537, 131074, 0, -1, 131074, 0, 65535, 131074, 0, 131071, 131074, 0, 196607, 131074, 0, 262143, 131074, 0, 327679, 131074, 0, 393215, 131074, 0, 458751, 131074, 0, 524287, 131074, 0, 589823, 131074, 0, 655359, 131074, 0, 720895, 131074, 0, 786431, 131074, 0, 851967, 131074, 0, 917503, 131074, 0, 983039, 131074, 0, 1048575, 131074, 0, 1114111, 131074, 0, 1179647, 131074, 0, 1245183, 131074, 0, 1310719, 131074, 0, 1376255, 131074, 0, 1376291, 131074, 0, 1441827, 131074, 0, -131036, 131074, 0, -65500, 131074, 0, 36, 131074, 0, 65572, 131074, 0, 131108, 131074, 0, 196644, 131074, 0, 262180, 131074, 0, 327716, 131074, 0, 393252, 131074, 0, 458788, 131074, 0, 524324, 131074, 0, 589860, 131074, 0, 655396, 131074, 0, 720932, 131074, 0, 786468, 131074, 0, 852004, 131074, 0, 917540, 131074, 0, 983076, 131074, 0, 1048612, 131074, 0, 1114148, 131074, 0, 1179684, 131074, 0, 1245220, 131074, 0, 1310756, 131074, 0, 1376292, 131074, 0, 1441828, 131074, 0, -131035, 131074, 0, -65499, 131074, 0, 37, 131074, 0, 65573, 131074, 0, 131109, 131074, 0, 196645, 131074, 0, 262181, 131074, 0, 327717, 131074, 0, 393253, 131074, 0, 458789, 131074, 0, 524325, 131074, 0, 589861, 131074, 0, 655397, 131074, 0, 720933, 131074, 0, 786469, 131074, 0, 852005, 131074, 0, 917541, 131074, 0, 983077, 131074, 0, 1048613, 131074, 0, 1114149, 131074, 0, 1179685, 131074, 0, 1245221, 131074, 0, 1310757, 131074, 0, 1376293, 131074, 0, 1441829, 131074, 0, -131034, 131074, 0, -65498, 131074, 0, 38, 131074, 0, 65574, 131074, 0, 131110, 131074, 0, 196646, 131074, 0, 262182, 131074, 0, 327718, 131074, 0, 393254, 131074, 0, 458790, 131074, 0, 524326, 131074, 0, 589862, 131074, 0, 655398, 131074, 0, 720934, 131074, 0, 786470, 131074, 0, 852006, 131074, 0, 917542, 131074, 0, 983078, 131074, 0, 1048614, 131074, 0, 1114150, 131074, 0, 1179686, 131074, 0, 1245222, 131074, 0, 1310758, 131074, 0, 1376294, 131074, 0, 1441830, 131074, 0, -131033, 131074, 0, -65497, 131074, 0, 39, 131074, 0, 65575, 131074, 0, 131111, 131074, 0, 196647, 131074, 0, 262183, 131074, 0, 327719, 131074, 0, 393255, 131074, 0, 458791, 131074, 0, 524327, 131074, 0, 589863, 131074, 0, 655399, 131074, 0, 720935, 131074, 0, 786471, 131074, 0, 852007, 131074, 0, 917543, 131074, 0, 983079, 131074, 0, 1048615, 131074, 0, 1114151, 131074, 0, 1179687, 131074, 0, 1245223, 131074, 0, 1310759, 131074, 0, 1376295, 131074, 0, 1441831, 131074, 0, 1376278, 131074, 0, 1441814, 131074, 0, 1376279, 131074, 0, 1441815, 131074, 0, 1376280, 131074, 0, 1441816, 131074, 0, 1376281, 131074, 0, 1441817, 131074, 0, 1376282, 131074, 0, 1441818, 131074, 0, 1376283, 131074, 0, 1441819, 131074, 0, 1376284, 131074, 0, 1441820, 131074, 0, 1376285, 131074, 0, 1441821, 131074, 0, 1376286, 131074, 0, 1441822, 131074, 0, 1376287, 131074, 0, 1441823, 131074, 0, 1376288, 131074, 0, 1441824, 131074, 0, 1376289, 131074, 0, 1441825, 131074, 0, 1376290, 131074, 0, 1441826, 131074, 0, 1376256, 131074, 0, 1441792, 131074, 0, 1376257, 131074, 0, 1441793, 131074, 0, 1376258, 131074, 0, 1441794, 131074, 0, 1376259, 131074, 0, 1441795, 131074, 0, 1376260, 131074, 0, 1441796, 131074, 0, 1376261, 131074, 0, 1441797, 131074, 0, 1376262, 131074, 0, 1441798, 131074, 0, 1376263, 131074, 0, 1441799, 131074, 0, 1376264, 131074, 0, 1441800, 131074, 0, 1376265, 131074, 0, 1441801, 131074, 0, 1376266, 131074, 0, 1441802, 131074, 0, 1376267, 131074, 0, 1441803, 131074, 0, 1376268, 131074, 0, 1441804, 131074, 0, 1376269, 131074, 0, 1441805, 131074, 0, 1376270, 131074, 0, 1441806, 131074, 0, 1376271, 131074, 0, 1441807, 131074, 0, 1376272, 131074, 0, 1441808, 131074, 0, 1376273, 131074, 0, 1441809, 131074, 0, 1376274, 131074, 0, 1441810, 131074, 0, 1441788, 131074, 0, 1507324, 131074, 0, 1441789, 131074, 0, 1507325, 131074, 0, 1441790, 131074, 0, 1507326, 131074, 0, 1441791, 131074, 0, 1507327, 131074, 0)

[node name="Cookies" parent="." instance=ExtResource("2_kx6l7")]
position = Vector2(1033, 290)

[node name="Fall tp" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fall tp"]
position = Vector2(659, 570)
shape = SubResource("SegmentShape2D_3sk1a")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(507, 337)
shape = SubResource("CircleShape2D_3sk1a")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 577.0
offset_top = 263.0
offset_right = 989.0
offset_bottom = 303.0
theme_override_fonts/normal_font = ExtResource("8_5ot28")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[shake]Nothing important down[/shake]"
visible_characters = 0
visible_ratio = 0.0
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_aerfg")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 57.0
offset_top = 13.0
offset_right = 57.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.905882, 0.192157, 1)

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vjtdm")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.09
one_shot = true

[node name="Player" parent="." instance=ExtResource("2_jirdo")]
position = Vector2(165, 280)

[node name="Camera2D" parent="." instance=ExtResource("10_08mmt")]
position = Vector2(579, 321)

[node name="replay sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_5ot28")
volume_db = 12.0

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2(567, 327.5)
scale = Vector2(4.55469, 2.47266)
color = Color(0.361575, 0.361575, 0.361575, 1)

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
energy = 0.43

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(577.25, 44.75)
scale = Vector2(21.6641, 16.6641)
color = Color(0.356863, 1, 1, 1)
energy = 0.43
shadow_enabled = true
texture = SubResource("GradientTexture2D_5ot28")

[node name="PointLight2D2" type="PointLight2D" parent="."]
position = Vector2(665, 528)
scale = Vector2(21.6641, 16.6641)
color = Color(0.356863, 1, 1, 1)
energy = 0.43
shadow_enabled = true
texture = SubResource("GradientTexture2D_5ot28")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_08mmt")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="."]
position = Vector2(-521, 0)
occluder = SubResource("OccluderPolygon2D_08mmt")

[connection signal="body_entered" from="Fall tp" to="." method="_on_fall_tp_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
